fixed screen stretching issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ section {
 }
 
 nav {
-  @apply w-full absolute top-2   md:top-5 lg:px-20  flex flex-col md:flex-row items-center gap-10 text-white font-semibold;
+  @apply w-full md:w-auto absolute top-2   md:top-5 lg:px-20  flex flex-col md:flex-row items-center gap-10 text-white font-semibold;
 }
 
 .logoGrp {
